# vulkan_simple_2d_engine

./: CMakeLists.txt  main.cpp
backend/: CMakeLists.txt
backend/include/: Instance.h  allocator.h  instance.h  logical-device.h  physical-device.h  queue-family-indices.h  surface.h  swap-chain-support-details.h  vulkan-application.h  window.h
backend/src/: Instance.cpp  allocator.cpp  instance.cpp  logical-device.cpp  physical-device.cpp  surface.cpp  vulkan-application.cpp  window.cpp
engine/: CMakeLists.txt
engine/descriptors/include/: descriptor-set-layout.h  descriptor-sets.h
engine/descriptors/src/: descriptor-set-layout.cpp  descriptor-sets.cpp
engine/pipeline/include/: graphics-pipeline.h  pipeline-layout.h  pipeline.h  shader-module.h
engine/pipeline/src/: graphics-pipeline.cpp  pipeline-layout.cpp  shader-module.cpp
engine/renderer/buffers/include/: buffer.h  index-buffer.h  vertex-buffer.h
engine/renderer/buffers/src/: index-buffer.cpp  vertex-buffer.cpp
engine/renderer/command-buffer/include/: command-buffer-recorder.h  command-buffers.h  command-pool.h
engine/renderer/command-buffer/src/: command-buffers.cpp  command-pool.cpp
engine/renderer/include/: image-memory-barrier.h  pipeline-renderer.h  renderer.h  square-drawer.h  synchronization.h
engine/renderer/src/: image-memory-barrier.cpp  pipeline-renderer.cpp  renderer.cpp  square-drawer.cpp
engine/square-renderer/include/: square-command-buffer-recorder-info.h  square-command-buffer-recorder.h  square-drawer.h
engine/square-renderer/src/: square-command-buffer-recorder.cpp  square-drawer.cpp  synchronization.cpp
engine/struct/: vertex.h
engine/swapchain/include/: i-swap-chain.h  image-views.h  present-swapchain.h
engine/swapchain/src/: i-swap-chain.cpp  image-views.cpp  present-swapchain.cpp
file-manager/: CMakeLists.txt
file-manager/include/: file-reader.h
file-manager/src/: file-reader.cpp
